--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -51,6 +51,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model_name=\"bert-base-chinese\"\n",
+    "local_dir=\"../../pretrained/${model_name}_\"\n",
+    "huggingface-cli download $model_name --exclude \"*.safetensors\" --exclude \"*.h5\" --exclude \"*.ot\" --exclude \"*.safetensors\" --exclude \"*.msgpack\" --local-dir $local_dir --local-dir-use-symlinks False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Preprocess and Concat"
    ]
   },
