--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -56,6 +56,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00001-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00002-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00003-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00004-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00005-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00006-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00007-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00008-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00009-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00010-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00011-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00012-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00013-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00014-of-00015.safetensors\n",
+      "https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-00015-of-00015.safetensors\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(1, 16):\n",
+    "    url = f\"https://huggingface.co/Qwen/Qwen-14B-Chat/resolve/main/model-000{x:02d}-of-00015.safetensors\"\n",
+    "    print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import hf_hub_download\n",
+    "\n",
+    "model_name = \"Qwen/Qwen-14B-Chat\"\n",
+    "local_dir = f\"../../pretrained/{model_name}\"\n",
+    "hf_hub_download(\n",
+    "    repo_id=model_name,\n",
+    "    filename=\"model-00008-of-00015.safetensors\",\n",
+    "    cache_dir=\"/data/jjwang/.cache/hf_cache\",\n",
+    "    local_dir=local_dir,\n",
+    "    local_dir_use_symlinks=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model_name=\"Qwen/Qwen-14B-Chat\"\n",
+    "local_dir=\"../../pretrained/${model_name}\"\n",
+    "nohup huggingface-cli download $model_name --exclude \".safetensors\" --local-dir $local_dir --local-dir-use-symlinks False --cache-dir /data/jjwang/.cache/hf_cache > ./downloading.log 2>&1 &"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
@@ -65,7 +132,7 @@
    "outputs": [],
    "source": [
     "model_name=\"bert-base-chinese\"\n",
-    "local_dir=\"../../pretrained/${model_name}_\"\n",
+    "local_dir=\"../../pretrained/${model_name}\"\n",
     "huggingface-cli download $model_name --exclude \"*.safetensors\" --exclude \"*.h5\" --exclude \"*.ot\" --exclude \"*.safetensors\" --exclude \"*.msgpack\" --local-dir $local_dir --local-dir-use-symlinks False"
    ]
   },
@@ -1250,8 +1317,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "nlp2",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
