--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -1309,6 +1309,438 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question1</th>\n",
+       "      <th>question2</th>\n",
+       "      <th>label</th>\n",
+       "      <th>rephrase1</th>\n",
+       "      <th>rephrase2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>喜欢打篮球的男生喜欢什么样的女生</td>\n",
+       "      <td>爱打篮球的男生喜欢什么样的女生</td>\n",
+       "      <td>1</td>\n",
+       "      <td>喜欢打篮球的男生通常喜欢什么样的女生？</td>\n",
+       "      <td>喜欢打篮球的男生喜欢怎样的女生？</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>我手机丢了，我想换个手机</td>\n",
+       "      <td>我想买个新手机，求推荐</td>\n",
+       "      <td>1</td>\n",
+       "      <td>由于我的手机丢失了，我打算更换一部新的手机。</td>\n",
+       "      <td>请问有什么好的手机推荐吗？我打算购买一个新的。</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>大家觉得她好看吗</td>\n",
+       "      <td>大家觉得跑男好看吗？</td>\n",
+       "      <td>0</td>\n",
+       "      <td>大家认为她长得漂亮吗？</td>\n",
+       "      <td>大家认为《奔跑吧》这个节目怎么样？</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>求秋色之空漫画全集</td>\n",
+       "      <td>求秋色之空全集漫画</td>\n",
+       "      <td>1</td>\n",
+       "      <td>请问哪里可以找到秋色之空漫画的全集？</td>\n",
+       "      <td>请问哪里可以找到秋色之空全集的漫画？</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>晚上睡觉带着耳机听音乐有什么害处吗？</td>\n",
+       "      <td>孕妇可以戴耳机听音乐吗?</td>\n",
+       "      <td>0</td>\n",
+       "      <td>戴着耳机在晚上睡觉听音乐会有哪些不良影响？</td>\n",
+       "      <td>孕妇是否可以使用耳机听音乐？</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            question1        question2  label               rephrase1  \\\n",
+       "0    喜欢打篮球的男生喜欢什么样的女生  爱打篮球的男生喜欢什么样的女生      1     喜欢打篮球的男生通常喜欢什么样的女生？   \n",
+       "1        我手机丢了，我想换个手机      我想买个新手机，求推荐      1  由于我的手机丢失了，我打算更换一部新的手机。   \n",
+       "2            大家觉得她好看吗       大家觉得跑男好看吗？      0             大家认为她长得漂亮吗？   \n",
+       "3           求秋色之空漫画全集        求秋色之空全集漫画      1      请问哪里可以找到秋色之空漫画的全集？   \n",
+       "4  晚上睡觉带着耳机听音乐有什么害处吗？     孕妇可以戴耳机听音乐吗?      0   戴着耳机在晚上睡觉听音乐会有哪些不良影响？   \n",
+       "\n",
+       "                 rephrase2  \n",
+       "0         喜欢打篮球的男生喜欢怎样的女生？  \n",
+       "1  请问有什么好的手机推荐吗？我打算购买一个新的。  \n",
+       "2        大家认为《奔跑吧》这个节目怎么样？  \n",
+       "3       请问哪里可以找到秋色之空全集的漫画？  \n",
+       "4           孕妇是否可以使用耳机听音乐？  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dataset = \"LCQMC\"\n",
+    "split = \"train\"\n",
+    "\n",
+    "output_file = f\"data/{dataset}/{split}/qwen_with_rephrase_clean_nodrop.jsonl\"\n",
+    "df = pd.read_json(output_file, lines=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d904110083a4942b94a2d382dc87d96",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Calculate self-bleu:   0%|          | 0/477532 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'self-bleu4': 0.2524336224560287}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from toolkit.metric import self_bleu\n",
+    "\n",
+    "s = []\n",
+    "for _, row in df.iterrows():\n",
+    "    # print(row)\n",
+    "    s.append([row[\"question1\"], row[\"rephrase1\"]])\n",
+    "    s.append([row[\"question2\"], row[\"rephrase2\"]])\n",
+    "\n",
+    "score = self_bleu(s, language=\"zh\", smoothing_level=1)\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question1</th>\n",
+       "      <th>question2</th>\n",
+       "      <th>label</th>\n",
+       "      <th>rephrase1</th>\n",
+       "      <th>rephrase2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>How is the life of a math student? Could you d...</td>\n",
+       "      <td>Which level of prepration is enough for the ex...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Can you share your experiences and describe wh...</td>\n",
+       "      <td>What degree of preparation is necessary for pa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>How do I control my horny emotions?</td>\n",
+       "      <td>How do you control your horniness?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>What strategies can I use to manage my sexual ...</td>\n",
+       "      <td>What methods do you use to manage your sexual ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>What causes stool color to change to yellow?</td>\n",
+       "      <td>What can cause stool to come out as little balls?</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Can you explain what factors might lead to a y...</td>\n",
+       "      <td>What are the possible reasons for stool appear...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>What can one do after MBBS?</td>\n",
+       "      <td>What do i do after my MBBS ?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>What are the post-MBBS options available?</td>\n",
+       "      <td>What steps should I take post-completion of my...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Where can I find a power outlet for my laptop ...</td>\n",
+       "      <td>Would a second airport in Sydney, Australia be...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>How can I locate an electrical socket for char...</td>\n",
+       "      <td>If a high-speed rail link were established bet...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           question1  \\\n",
+       "0  How is the life of a math student? Could you d...   \n",
+       "1                How do I control my horny emotions?   \n",
+       "2       What causes stool color to change to yellow?   \n",
+       "3                        What can one do after MBBS?   \n",
+       "4  Where can I find a power outlet for my laptop ...   \n",
+       "\n",
+       "                                           question2  label  \\\n",
+       "0  Which level of prepration is enough for the ex...      0   \n",
+       "1                 How do you control your horniness?      1   \n",
+       "2  What can cause stool to come out as little balls?      0   \n",
+       "3                       What do i do after my MBBS ?      1   \n",
+       "4  Would a second airport in Sydney, Australia be...      0   \n",
+       "\n",
+       "                                           rephrase1  \\\n",
+       "0  Can you share your experiences and describe wh...   \n",
+       "1  What strategies can I use to manage my sexual ...   \n",
+       "2  Can you explain what factors might lead to a y...   \n",
+       "3          What are the post-MBBS options available?   \n",
+       "4  How can I locate an electrical socket for char...   \n",
+       "\n",
+       "                                           rephrase2  \n",
+       "0  What degree of preparation is necessary for pa...  \n",
+       "1  What methods do you use to manage your sexual ...  \n",
+       "2  What are the possible reasons for stool appear...  \n",
+       "3  What steps should I take post-completion of my...  \n",
+       "4  If a high-speed rail link were established bet...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dataset = \"QQP\"\n",
+    "split = \"train\"\n",
+    "\n",
+    "output_file = f\"data/{dataset}/{split}/qwen_with_rephrase_clean_nodrop.jsonl\"\n",
+    "df = pd.read_json(output_file, lines=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a23943af408e4ab6ab470c55b11026c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Calculate self-bleu:   0%|          | 0/727692 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'self-bleu4': 0.11915685605405273}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from toolkit.metric import self_bleu\n",
+    "\n",
+    "# df = df[:10000]\n",
+    "s = []\n",
+    "for _, row in df.iterrows():\n",
+    "    # print(row)\n",
+    "    s.append([row[\"question1\"], row[\"rephrase1\"]])\n",
+    "    s.append([row[\"question2\"], row[\"rephrase2\"]])\n",
+    "\n",
+    "score = self_bleu(s, language=\"en\", smoothing_level=1)\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "24fb15cb8b1e4ed1a558501f3f18ef06",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Calculate self-bleu:   0%|          | 0/200000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'self-bleu4': 0.213254426817174}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dataset = \"BQ\"\n",
+    "split = \"train\"\n",
+    "\n",
+    "output_file = f\"data/{dataset}/{split}/qwen_with_rephrase_clean_nodrop.jsonl\"\n",
+    "df = pd.read_json(output_file, lines=True)\n",
+    "\n",
+    "from toolkit.metric import self_bleu\n",
+    "\n",
+    "# df = df[:10000]\n",
+    "s = []\n",
+    "for _, row in df.iterrows():\n",
+    "    # print(row)\n",
+    "    s.append([row[\"question1\"], row[\"rephrase1\"]])\n",
+    "    s.append([row[\"question2\"], row[\"rephrase2\"]])\n",
+    "\n",
+    "score = self_bleu(s, language=\"zh\", smoothing_level=1)\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e05293507364e01b635bdfc45cc6a19",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Calculate self-bleu:   0%|          | 0/7336 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'self-bleu4': 0.13904351701205758}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dataset = \"MRPC\"\n",
+    "split = \"train\"\n",
+    "\n",
+    "output_file = f\"data/{dataset}/{split}/qwen_with_rephrase_clean_nodrop.jsonl\"\n",
+    "df = pd.read_json(output_file, lines=True)\n",
+    "\n",
+    "from toolkit.metric import self_bleu\n",
+    "\n",
+    "# df = df[:10000]\n",
+    "s = []\n",
+    "for _, row in df.iterrows():\n",
+    "    # print(row)\n",
+    "    s.append([row[\"sentence1\"], row[\"rephrase1\"]])\n",
+    "    s.append([row[\"sentence2\"], row[\"rephrase2\"]])\n",
+    "\n",
+    "score = self_bleu(s, language=\"en\", smoothing_level=1)\n",
+    "score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
