--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -1789,7 +1789,7 @@
     "dataset = TextDataset.from_file(\n",
     "    config.train_file_path,\n",
     "    tokenizer,\n",
-    "    split=Split.TRAINING,\n",
+    "    split=Split.ANY,\n",
     "    configs=config,\n",
     "    load_data_fn=LOAD_DATA_FNS[DatasetName[config.dataset_name]],\n",
     "    text_type=TextType[config.text_type],\n",
@@ -1882,7 +1882,7 @@
     "dataset = TextDataset.from_file(\n",
     "    config.val_file_path,\n",
     "    tokenizer,\n",
-    "    split=Split.VALIDATION,\n",
+    "    split=Split.ANY,\n",
     "    configs=config,\n",
     "    load_data_fn=LOAD_DATA_FNS[DatasetName[config.dataset_name]],\n",
     "    text_type=TextType[config.text_type],\n",
@@ -1969,8 +1969,101 @@
     "from toolkit.enums import Split\n",
     "from transformers import AutoTokenizer\n",
     "\n",
+    "split = \"train\"\n",
+    "model_path = \"outputs/BQ/bert-base-chinese/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/97/optimal_checkpoint\"\n",
+    "# model_path = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.8/seed_of_stage1=109/1/16/2e-06/11/optimal_checkpoint\"\n",
+    "# model_type = model_path.split(\"/\")[2]\n",
+    "# dataset_name  = model_path.split(\"/\")[1]\n",
+    "config = NLPTrainingConfig.load(model_path)\n",
+    "config.text_type = \"CHECK_HAL2\"\n",
+    "# config.test_file_path=\"./data/LCQMC/test/qwen_with_rephrase_clean_nodrop.jsonl\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
+    "\n",
+    "dataset = TextDataset.from_file(\n",
+    "    config.train_file_path,\n",
+    "    tokenizer,\n",
+    "    split=Split.ANY,\n",
+    "    configs=config,\n",
+    "    load_data_fn=LOAD_DATA_FNS[DatasetName[config.dataset_name]],\n",
+    "    text_type=TextType[config.text_type],\n",
+    "    dataset_name=DatasetName[config.dataset_name],\n",
+    "    use_cache=True,\n",
+    ")\n",
+    "dataset.report()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a8391d6b2f044dfb80413d42fac271e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ANY:   0%|          | 0/1563 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'accuracy': 85.167, 'F1-score': 84.63618001967994, 'loss': 0.41520516029055576}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from toolkit.training import Evaluator\n",
+    "from model.MatchModel_binary_classification import BertModel_binary_classify, RobertaModel_binary_classify\n",
+    "\n",
+    "from toolkit.enums import Split\n",
+    "from utils.evaluate import Evaluator1\n",
+    "\n",
+    "if \"roberta\" in config.model_type:\n",
+    "    pass\n",
+    "else:\n",
+    "    model = BertModel_binary_classify.from_pretrained(model_path)\n",
+    "config.batch_size_infer = 64\n",
+    "Evaluator1.confused_use_ot = False\n",
+    "Evaluator1.save_results = False\n",
+    "evaluator = Evaluator1(\n",
+    "    \"classify\",\n",
+    "    Split.ANY,\n",
+    "    config=config,\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    dataset=dataset,\n",
+    "    # dataset_name=DatasetName[dataset_name],\n",
+    "    extral_args_evaluation={\"is_train\": False},\n",
+    ")\n",
+    "metric_dict = evaluator.eval(cuda_id=0)\n",
+    "print(metric_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from load_data_fns import LOAD_DATA_FNS, DatasetName, TextType\n",
+    "\n",
+    "# from torch.utils.data import DataLoader\n",
+    "from transformers import RobertaTokenizer\n",
+    "from toolkit.nlp import TextDataset\n",
+    "from toolkit.nlp import NLPTrainingConfig\n",
+    "from toolkit.enums import Split\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
     "split = \"val\"\n",
-    "model_path = \"outputs/BQ/bert-base-chinese/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/149/optimal_checkpoint\"\n",
+    "model_path = \"outputs/BQ/bert-base-chinese/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/97/optimal_checkpoint\"\n",
     "# model_path = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.8/seed_of_stage1=109/1/16/2e-06/11/optimal_checkpoint\"\n",
     "# model_type = model_path.split(\"/\")[2]\n",
     "# dataset_name  = model_path.split(\"/\")[1]\n",
@@ -2241,7 +2334,9 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "split = \"train\"\n",
-    "model_path = \"outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/43/optimal_checkpoint\"\n",
+    "# model_path = \"outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/43/optimal_checkpoint\"\n",
+    "model_path = \"outputs/MRPC/roberta-base/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/13/optimal_checkpoint\"\n",
+    "\n",
     "# model_path = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.8/seed_of_stage1=109/1/16/2e-06/11/optimal_checkpoint\"\n",
     "# model_type = model_path.split(\"/\")[2]\n",
     "# dataset_name  = model_path.split(\"/\")[1]\n",
@@ -2253,7 +2348,7 @@
     "dataset = TextDataset.from_file(\n",
     "    config.train_file_path,\n",
     "    tokenizer,\n",
-    "    split=Split.TRAINING,\n",
+    "    split=Split.ANY,\n",
     "    configs=config,\n",
     "    load_data_fn=LOAD_DATA_FNS[DatasetName[config.dataset_name]],\n",
     "    text_type=TextType[config.text_type],\n",
@@ -2265,13 +2360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4ced0727c0745fdb717902174cfff2b",
+       "model_id": "8e745a606c5044e9a24944f66cecf48e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2286,7 +2381,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'accuracy': 84.02399127589966, 'F1-score': 87.56366723259762, 'loss': 0.37531086828174265}\n"
+      "{'accuracy': 83.56052344601963, 'F1-score': 86.911222053397, 'loss': 0.3962456424688471}\n"
      ]
     }
    ],
@@ -2298,7 +2393,7 @@
     "from utils.evaluate import Evaluator1\n",
     "\n",
     "if \"roberta\" in config.model_type:\n",
-    "    pass\n",
+    "    model = RobertaModel_binary_classify.from_pretrained(model_path)\n",
     "else:\n",
     "    model = BertModel_binary_classify.from_pretrained(model_path)\n",
     "config.batch_size_infer = 64\n",
@@ -2334,7 +2429,9 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "split = \"val\"\n",
-    "model_path = \"outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/43/optimal_checkpoint\"\n",
+    "# model_path = \"outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/43/optimal_checkpoint\"\n",
+    "model_path = \"outputs/MRPC/roberta-base/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/13/optimal_checkpoint\"\n",
+    "\n",
     "# model_path = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.8/seed_of_stage1=109/1/16/2e-06/11/optimal_checkpoint\"\n",
     "# model_type = model_path.split(\"/\")[2]\n",
     "# dataset_name  = model_path.split(\"/\")[1]\n",
@@ -2346,7 +2443,7 @@
     "dataset = TextDataset.from_file(\n",
     "    config.val_file_path,\n",
     "    tokenizer,\n",
-    "    split=Split.VALIDATION,\n",
+    "    split=Split.ANY,\n",
     "    configs=config,\n",
     "    load_data_fn=LOAD_DATA_FNS[DatasetName[config.dataset_name]],\n",
     "    text_type=TextType[config.text_type],\n",
@@ -2358,13 +2455,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c35f02f405a54003ad1d05bf39338249",
+       "model_id": "8cf7d84d1dc94003acfebf574cc8e88d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2379,7 +2476,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'accuracy': 82.1078431372549, 'F1-score': 86.89407540394973, 'loss': 0.44219895132950376}\n"
+      "{'accuracy': 82.1078431372549, 'F1-score': 86.50646950092421, 'loss': 0.41530599551541464}\n"
      ]
     }
    ],
@@ -2391,7 +2488,7 @@
     "from utils.evaluate import Evaluator1\n",
     "\n",
     "if \"roberta\" in config.model_type:\n",
-    "    pass\n",
+    "    model = RobertaModel_binary_classify.from_pretrained(model_path)\n",
     "else:\n",
     "    model = BertModel_binary_classify.from_pretrained(model_path)\n",
     "config.batch_size_infer = 64\n",
