--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -2163,7 +2163,9 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "split = \"train\"\n",
-    "model_path = \"outputs/QQP/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/78/optimal_checkpoint\"\n",
+    "# model_path = \"outputs/QQP/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/78/optimal_checkpoint\"\n",
+    "model_path = \"outputs/QQP/roberta-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/2/optimal_checkpoint\"\n",
+    "\n",
     "# model_path = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.8/seed_of_stage1=109/1/16/2e-06/11/optimal_checkpoint\"\n",
     "# model_type = model_path.split(\"/\")[2]\n",
     "# dataset_name  = model_path.split(\"/\")[1]\n",
@@ -2175,7 +2177,7 @@
     "dataset = TextDataset.from_file(\n",
     "    config.train_file_path,\n",
     "    tokenizer,\n",
-    "    split=Split.TRAINING,\n",
+    "    split=Split.ANY,\n",
     "    configs=config,\n",
     "    load_data_fn=LOAD_DATA_FNS[DatasetName[config.dataset_name]],\n",
     "    text_type=TextType[config.text_type],\n",
@@ -2187,9 +2189,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dfa8e4e8582a40f7bd3759414c4d0dcb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ANY:   0%|          | 0/5686 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'accuracy': 70.04611841273505, 'F1-score': 61.55669528532829, 'loss': 0.9505464813363749}\n"
+     ]
+    }
+   ],
    "source": [
     "# from toolkit.training import Evaluator\n",
     "from model.MatchModel_binary_classification import BertModel_binary_classify, RobertaModel_binary_classify\n",
@@ -2220,9 +2244,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-04-09 15:28:05,281\u001b[32m <INFO> Configuration: 👻 Custom attributes:\u001b[0m\n",
+      "2024-04-09 15:28:05,282\u001b[32m <INFO> Configuration:    text_type=ORI\u001b[0m\n",
+      "2024-04-09 15:28:05,283\u001b[32m <INFO> Configuration:    min_threshold=None\u001b[0m\n",
+      "2024-04-09 15:28:05,283\u001b[32m <INFO> Configuration:    alpha=None\u001b[0m\n",
+      "2024-04-09 15:28:05,284\u001b[32m <INFO> Configuration:    part=all\u001b[0m\n",
+      "2024-04-09 15:28:05,284\u001b[32m <INFO> Configuration:    auxloss_warmup_steps=1\u001b[0m\n",
+      "2024-04-09 15:28:05,285\u001b[32m <INFO> Configuration:    total_num_steps=68223\u001b[0m\n",
+      "2024-04-09 15:28:05,285\u001b[32m <INFO> Configuration:    steps_per_epoch=22741\u001b[0m\n",
+      "2024-04-09 15:28:05,286\u001b[32m <INFO> Configuration:    training_runtime={'cur_step': 68223, 'cur_epoch': 2}\u001b[0m\n",
+      "2024-04-09 15:28:05,372 <DEBUG> TextDataset: ⏳ Loading VALIDATION dataset ...\u001b[0m\n",
+      "2024-04-09 15:28:05,374 <DEBUG> TextDataset: ❕ There is no cache.\u001b[0m\n",
+      "2024-04-09 15:28:05,375 <DEBUG> TextDataset: Model max length: 512\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "edb784f8bd8b487bbb5d968140871b69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tokenize VALIDATION input texts:   0%|          | 0/40430 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-04-09 15:28:14,432 <DEBUG> TextDataset: 💿 Caching dataset from data/QQP/val/qwen_with_rephrase_clean_nodrop.jsonl ...\u001b[0m\n",
+      "2024-04-09 15:28:14,434 <DEBUG> TextDataset: ❔ Cache file will be saved in .cache/dataset/transformers.models.roberta.tokenization_roberta_fast.RobertaTokenizerFast/text_type=CHECK_HAL2/dataset_name=QQP/data/jjwang/codes/tiwr/data/QQP/val/qwen_with_rephrase_clean_nodrop.pkl\u001b[0m\n",
+      "2024-04-09 15:28:15,122 <DEBUG> TextDataset: ✔️  Cache successfully.\u001b[0m\n",
+      "2024-04-09 15:28:15,127 <DEBUG> TextDataset: ⌛ Loading VALIDATION data takes 9.75 sec.\u001b[0m\n",
+      "2024-04-09 15:28:15,128\u001b[32m <INFO> [toolkit]: Total VALIDATION data: 40430\u001b[0m\n",
+      "2024-04-09 15:28:15,128\u001b[32m <INFO> [toolkit]: Max length of input: 185\u001b[0m\n",
+      "2024-04-09 15:28:15,129\u001b[32m <INFO> [toolkit]: Max length of label: 1\u001b[0m\n",
+      "2024-04-09 15:28:15,312\u001b[32m <INFO> [toolkit]: ✂️  Truncating VALIDATION data: cnt=0, input_len=185, label_len=1\u001b[0m\n",
+      "2024-04-09 15:28:15,314\u001b[32m <INFO> [toolkit]: Total VALIDATION data: 40430\u001b[0m\n",
+      "2024-04-09 15:28:15,315\u001b[32m <INFO> [toolkit]: Max length of input: 185\u001b[0m\n",
+      "2024-04-09 15:28:15,315\u001b[32m <INFO> [toolkit]: Max length of label: 1\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from load_data_fns import LOAD_DATA_FNS, DatasetName, TextType\n",
     "\n",
@@ -2234,7 +2308,9 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "split = \"val\"\n",
-    "model_path = \"outputs/QQP/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/78/optimal_checkpoint\"\n",
+    "# model_path = \"outputs/QQP/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/78/optimal_checkpoint\"\n",
+    "model_path = \"outputs/QQP/roberta-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/2/optimal_checkpoint\"\n",
+    "\n",
     "# model_path = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.8/seed_of_stage1=109/1/16/2e-06/11/optimal_checkpoint\"\n",
     "# model_type = model_path.split(\"/\")[2]\n",
     "# dataset_name  = model_path.split(\"/\")[1]\n",
@@ -2258,13 +2334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcb4251c3ba84dd5b0f30e22179477b8",
+       "model_id": "5296c7c6668243698d49a51251b3c531",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2279,7 +2355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'accuracy': 82.95572594607964, 'F1-score': 74.23636295659325, 'loss': 0.7358316744830978}\n"
+      "{'accuracy': 69.93321790749444, 'F1-score': 61.333418156371266, 'loss': 0.9540170201017887}\n"
      ]
     }
    ],
